fixed some scrollbar styles, updated line chart

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -86,6 +86,9 @@ p {
   grid-row: 1 / 7;
   padding: 15px;
 }
+.recharts-text {
+  fill: #bdbdbd;
+}
 .red {
   color: red;
 }
@@ -107,13 +110,20 @@ p {
   overflow-x: hidden;
 }
 .scroll::-webkit-scrollbar {
-  width: 10px;
-  background-color: #444 !important;
+  width: 7px;
+  height: 7px;
+  background: #404040;
+}
+.scroll::-webkit-scrollbar-corner {
+  background: #404040;
+}
+.scroll::-webkit-scrollbar-thumb {
+  background: #5c5c5c;
 }
 .scroll::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 2px;
+  /* border-radius: 2px; */
   background-color: #bdbdbd;
 }
 .table-dark td {
